Fix tablet product page layout - delay 2-column grid to lg breakpoint
The 2-column grid was kicking in at md (769px) which resulted in cramped
~352px columns. Moving to lg (1001px) gives ~468px per column which
provides adequate space for the gallery and product info.

Tablets now use a clean single-column layout.

--- a/css/theme.scss
+++ b/css/theme.scss
@@ -2243,7 +2243,7 @@ div.fun-pro-item {
   }
 
   .inner {
-    @include breakpoints.up("md") {
+    @include breakpoints.up("lg") {
       display: grid;
       gap: 0 64px;
       grid-template-columns: 1fr 1fr;
